perf: 移出导入模板数据校验，改为help提醒

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-02 12:25+0800\n"
+"POT-Creation-Date: 2024-11-02 12:27+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -239,7 +239,7 @@ msgid "JSON"
 msgstr ""
 
 #: common/drf/renders/base.py:196
-msgid "UUID"
+msgid "UUID4"
 msgstr ""
 
 #: common/drf/renders/base.py:301
