--- a/locale/zh/LC_MESSAGES/django.po
+++ b/locale/zh/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-07 15:47+0800\n"
+"POT-Creation-Date: 2024-11-12 12:39+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,9 +44,9 @@ msgid ""
 "The requested address is incorrect or the data permission is not allowed"
 msgstr "请求地址不正确或数据权限不允许"
 
-#: common/core/exception.py:64
-msgid "This data with other data binding"
-msgstr "该条数据与其他数据有绑定"
+#: common/core/exception.py:65
+msgid "Is referenced by other {} and cannot be deleted"
+msgstr "被其他 {} 关联，不能删除"
 
 #: common/core/fields.py:78
 msgid "This field is required."
